Bug 1364849 - Recycle short lived content processes. r=mrbkap To prevent addons or other code to rapidly create and destroy content processes under various conditions, we let the preallocated process manager to reuse short lived content processes.